in kspread => Scripts -> scripts -> callme or widget_kspread (with
qt-widget)

Add possibity to create extern function ex :
	-percent(2,5)
it's not a function in kspread
it's loading a the begining =>math.ks
Add a Manual for kscript in koffice/lib/kscript/Manual
=>Now everybody can create extern function or script

1999-12-03 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add functions PERMUT COMBIN and fract

Summary 1999-11-28 ->1999-12-03
A bug was fixed by Mr Well (I believe)
=>Now kspread don't crash when you write bad tablename in a cell
thanks.

1999-12-16 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can put text to bottom ,middle or top in a cell

Summary 1999-12-03 ->1999-12-16
1999-12-15 KRASH release.


1999-12-22 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Replace   QPushButton by   KColorButton
because when you insert a style (a theme) in kde you can't change color
in a QPushButton (use color of theme).

-Add new style of line   DashDotLine and  DashDotDotLine

1999-12-23 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can make diagonal in a cell.

1999-12-27 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Improved choose border (look at in "Cell Layout")

1999-12-28 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can put a pattern in a cell
-bug fix in choose border
-Now you can choose border directly with the mouse in the area.

1999-12-29 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Bug fix in special paste (right border and bottom border are not
installing in new cell when you choose Text or NoBorder parameter)
-Clean up in code
-Add setFocus in different dialog box